--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "graph-proj-survey",
-  "homepage": "https://KrDmitri.github.io/graph-proj-survey",
+  "name": "CompAltTextSurvey",
+  "homepage": "https://HyunWookL.github.io/CompAltTextSurvey",
   "private": true,
   "version": "0.0.0",
   "type": "module",
