--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CompAltTextSurvey",
-  "homepage": "https://HyunWookL.github.io/CompAltTextSurvey",
+  "homepage": "https://hyunwookl.github.io/CompAltTextSurvey",
   "private": true,
   "version": "0.0.0",
   "type": "module",
